Fix comment in config example to clarify file_action_size default
Co-authored-by: macmiranda <17923899+macmiranda@users.noreply.github.com>

--- a/config.toml.example
+++ b/config.toml.example
@@ -32,4 +32,4 @@ pod_namespace = "default"
 # Plugin-specific configuration
 # File Action Plugin
 file_action_dir = "/tmp/metric-files"
-file_action_size = 104857600  # Size in bytes (default: 100MB)
+file_action_size = 104857600  # Size in bytes (100MB shown here, default is 1MB)
